data/derived/comb/progs/unify/prog0210.ml.out
Characters 50-55:
  (List.rev (List.combine  [9;9;9;9] [0; 9;9;9])) @ (0,0);;
                                                    ^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type (int * int) list
